namespace MecaManage.Domain.Enums;

public enum UserRole
{
    SuperAdmin,
    AdminEntreprise,
    ChefAtelier,
    Mecanicien,
    Client
}